Fixed issue. Prettified JSON is not wrapped in mobile.

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -7,6 +7,7 @@ html, body, #root {
 
 pre {
     color: yellow;
+    white-space: pre-wrap ;
 }
 
 @media (min-width: 992px){
@@ -77,9 +78,7 @@ pre {
 
 }
 
-
 @media (max-width: 991px){
-    
     .controller {
         height: 100vh;
         padding-right: 15px;
